update button width

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         color: white;
         font-weight: 600;
         background: linear-gradient(90deg, var(--start-color), var(--end-color));
-        width: fit-content;
-        min-width: 50%;
+        /* width: fit-content;
+        min-width: 50%; */
       }
       .quiz-button:hover {
         box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
