--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="tooltip">
           <button class="quiz-button button-cyan" disabled>
             <span class="button-icon">✏️</span>
-            按某列数据拆分成多个sheet表
+            按列拆分成多个sheet表
           </button>
           <span class="tooltiptext">
             此功能正在开发中，敬请期待...
@@ -231,7 +231,7 @@
         <div class="tooltip">
           <button class="quiz-button button-orange" disabled>
             <span class="button-icon">🏆</span>
-            自动提取身份中生日和年龄
+            提取身份证生日和年龄
           </span>
           <span class="tooltiptext">
             此功能正在开发中，敬请期待...
