--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         transition: opacity 0.3s;
         font-size: 13px;
         line-height: 1.4;
+        text-align: left;
       }
       .tooltip:hover .tooltiptext {
         visibility: visible;
